Made the dtos immutable. Fixed the equals() and hashCode() methods of the entities.